--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,13 @@ href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swa
 rel="stylesheet"
 />
 <!-- MDB -->
+
+<link 
+rel="stylesheet" 
+href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" 
+integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" 
+crossorigin="anonymous">
+
 <link
 href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.css"
 rel="stylesheet"
